changed to txt color

--- a/styles/designs.css
+++ b/styles/designs.css
@@ -1,15 +1,15 @@
 a:link {
-    background-color: yellow;
+    color: yellow;
   }
   
   a:visited {
-    background-color: cyan;
+    color: cyan;
   }
   
   a:hover {
-    background-color: lightgreen;
+    color: lightgreen;
   }
   
   a:active {
-    background-color: hotpink;
+    color: hotpink;
   } 
