--- a/styles/designs.css
+++ b/styles/designs.css
@@ -7,3 +7,18 @@
   a:active{
       color: lightskyblue;
   }
+  .rsimg-container{
+    width: 2px;
+    z-index: -1;
+    height: auto;
+    display: inline-block;
+    border-style: solid;
+    border-width: 3px;
+  }
+  .rsimg{
+    display: inline-block;
+    z-index: -3;
+    height: 24px;
+    width: 30px;
+    position: relative;
+  }
