--- a/styles/designs.css
+++ b/styles/designs.css
@@ -15,7 +15,7 @@
     border-style: solid;
     border-width: 3px;
   }
-  .rsimg{
+  .rsize{
     display: inline-block;
     z-index: -3;
     height: 24px;
