--- a/styles/designs.css
+++ b/styles/designs.css
@@ -9,7 +9,7 @@
   }
   .rsimg-container{
     width: 2px;
-    z-index: -1;
+    z-index: -2;
     height: auto;
     display: inline-block;
     border-style: solid;
@@ -21,4 +21,5 @@
     height: 24px;
     width: 30px;
     position: relative;
+    top: -100px;
   }
