--- a/styles/designs.css
+++ b/styles/designs.css
@@ -7,7 +7,7 @@
   a:active{
       color: lightskyblue;
   }
-  .rsimg-container{
+  .rsziecon{
     width: 2px;
     z-index: -2;
     height: auto;
@@ -21,5 +21,5 @@
     height: 24px;
     width: 30px;
     position: relative;
-    top: -100px;
+    right: 200%;
   }
