--- a/styles/designs.css
+++ b/styles/designs.css
@@ -14,6 +14,7 @@
     display: inline-block;
     border-style: solid;
     border-width: 3px;
+    border-color: black;
   }
   .rsize{
     display: inline-block;
