--- a/styles/designs.css
+++ b/styles/designs.css
@@ -7,8 +7,8 @@
   a:active{
       color: lightskyblue;
   }
-  .rsize{
+  .fruit{
     display: inline-block;
     width: 150px;
-    height: 130px;
+    height: 70px;
   }
